Overhaul GUI and allow activating multiple CommandKeys with a single keypress, close #3