@@ -8,6 +8,7 @@ package dev.terminalmc.commandkeys.util;
 import com.mojang.blaze3d.platform.InputConstants;
 import dev.terminalmc.commandkeys.CommandKeys;
 import dev.terminalmc.commandkeys.config.CommandKey;
+import dev.terminalmc.commandkeys.config.Message;
 import dev.terminalmc.commandkeys.config.Profile;
 import dev.terminalmc.commandkeys.config.QuadState;
 import dev.terminalmc.commandkeys.mixin.KeyMappingAccessor;
@@ -15,7 +16,9 @@ import net.minecraft.client.KeyMapping;
 import net.minecraft.client.Minecraft;
 import org.jetbrains.annotations.Nullable;
 
-import java.util.Set;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.List;
 
 import static dev.terminalmc.commandkeys.CommandKeys.profile;
 
@@ -33,42 +36,67 @@ public class KeyUtil {
     }
 
     public static boolean handleKey(InputConstants.Key key) {
-
-        boolean cancelClick = false;
+        boolean cancel = false;
         boolean cancelNext = false;
-        if (Minecraft.getInstance().screen == null && profile().commandKeyMap.containsKey(key)) {
 
-            CommandKey cmdKey = null;
-            Set<CommandKey> commandKeys = profile().commandKeyMap.get(key);
-            for (CommandKey ck1 : commandKeys) {
-                if (!ck1.conflictStrategy.state.equals(QuadState.State.THREE)) {
-                    if (ck1.getLimitKey().equals(InputConstants.UNKNOWN)) {
-                        // Found a matching single-key CommandKey, but preference
-                        // the ones with modifier keys that are down.
-                        cmdKey = ck1;
-                        for (CommandKey ck2 : commandKeys) {
-                            if (!ck2.conflictStrategy.state.equals(QuadState.State.THREE) &&
-                                    !ck2.getLimitKey().equals(InputConstants.UNKNOWN) &&
-                                    InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(),
-                                            ck2.getLimitKey().getValue())) {
-                                cmdKey = ck2;
-                                break;
-                            }
+        // Check that we can send, and whether there's any matching CommandKey
+        if (Minecraft.getInstance().screen == null && profile().commandKeyMap.containsKey(key)) {
+            // Get all keys matching the pressed key
+
+            /*
+            0. b
+            1. Get all CKs matching the pressed key
+            2. Check modifiers; if any modified CK has its modifier down,
+
+
+             */
+
+            long window = Minecraft.getInstance().getWindow().getWindow();
+            boolean onlyLimit = false;
+
+            Collection<CommandKey> allKeys = profile().commandKeyMap.get(key);
+
+            // If any matching CommandKey has a pressed limit key, don't send
+            // messages of any CommandKeys without limit keys.
+
+            for (CommandKey cmdKey : allKeys) {
+                if (!cmdKey.conflictStrategy.state.equals(QuadState.State.THREE)) {
+                    if (!cmdKey.getLimitKey().equals(InputConstants.UNKNOWN)) {
+                        if (InputConstants.isKeyDown(window, cmdKey.getLimitKey().getValue())) {
+                            onlyLimit = true;
+                            break;
                         }
-                        break;
-                    }
-                    else if (InputConstants.isKeyDown(Minecraft.getInstance().getWindow().getWindow(),
-                            ck1.getLimitKey().getValue())) {
-                        cmdKey = ck1;
-                        break;
                     }
                 }
             }
-            
-            if (cmdKey != null) {
-                
+
+            List<CommandKey> sendKeys = new ArrayList<>();
+            if (onlyLimit) {
+                // Only send for limit-capable CommandKeys with limit key pressed
+                for (CommandKey cmdKey : allKeys) {
+                    if (!cmdKey.conflictStrategy.state.equals(QuadState.State.THREE)) {
+                        if (!cmdKey.getLimitKey().equals(InputConstants.UNKNOWN)) {
+                            if (InputConstants.isKeyDown(window, cmdKey.getLimitKey().getValue())) {
+                                sendKeys.add(cmdKey);
+                            }
+                        }
+                    }
+                }
+            }
+            else {
+                // Only send for non-limit-capable CommandKeys
+                for (CommandKey cmdKey : allKeys) {
+                    if (!cmdKey.conflictStrategy.state.equals(QuadState.State.THREE)) {
+                        if (cmdKey.getLimitKey().equals(InputConstants.UNKNOWN)) {
+                            sendKeys.add(cmdKey);
+                        }
+                    }
+                }
+            }
+
+            boolean override = false;
+            for (CommandKey cmdKey : sendKeys) {
                 boolean send = true;
-                boolean override = false;
                 switch(cmdKey.conflictStrategy.state) {
                     // Can't use MAP.contains(key) because Forge replaces the
                     // java.util.Map with a KeyMappingLookup thing.
@@ -78,47 +106,47 @@ public class KeyUtil {
 
                 if (send) {
                     cancelNext = true;
-                    cancelClick = override;
 
                     switch(cmdKey.sendStrategy.state) {
                         case ZERO -> {
                             Profile profile = CommandKeys.profile();
-                            int i = 0;
-                            for (String msg : cmdKey.messages) {
-                                CommandKeys.queue(i++ * cmdKey.spaceTicks, msg,
+                            // If using standard delay, doesn't apply to first
+                            boolean standardDelay = cmdKey.spaceTicks != -1;
+                            int cumulativeDelay = standardDelay ? -cmdKey.spaceTicks : 0;
+                            for (Message msg : cmdKey.getMessages()) {
+                                cumulativeDelay += standardDelay ? cmdKey.spaceTicks : msg.delayTicks;
+                                CommandKeys.queue(cumulativeDelay, msg.string,
                                         profile.addToHistory, profile.showHudMessage);
                             }
                         }
                         case ONE -> {
-                            if (!cmdKey.messages.isEmpty()) {
-                                cancelClick = true;
-                                CommandKeys.type(cmdKey.messages.get(0));
+                            if (!cmdKey.getMessages().isEmpty()) {
+                                cancel = true;
+                                CommandKeys.type(cmdKey.getMessages().getFirst().string);
                             }
                         }
                         case TWO -> {
-                            // Strategy to allow spacer blank messages, and multiple
+                            // Allow spacer blank messages, and multiple
                             // messages per cycling key-press.
                             Profile profile = CommandKeys.profile();
-                            String messages = cmdKey.messages.get(cmdKey.cycleIndex);
-                            if (messages != null && !messages.isBlank()) {
-                                for (String msg : messages.split(",,")) {
-                                    if (!msg.isBlank()) {
-                                        CommandKeys.send(msg, profile.addToHistory, profile.showHudMessage);
-                                    }
+                            String messages = cmdKey.getMessages().get(cmdKey.cycleIndex).string;
+                            for (String msg : messages.split(",,")) {
+                                if (!msg.isBlank()) {
+                                    CommandKeys.send(msg, profile.addToHistory, profile.showHudMessage);
                                 }
                             }
-                            if (cmdKey.cycleIndex < cmdKey.messages.size() - 1) {
+                            if (cmdKey.cycleIndex < cmdKey.getMessages().size() - 1) {
                                 cmdKey.cycleIndex ++;
-                            }
-                            else {
+                            } else {
                                 cmdKey.cycleIndex = 0;
                             }
                         }
                     }
                 }
             }
+            if (override) cancel = override;
         }
-        if (!cancelClick) KeyMapping.click(key);
+        if (!cancel) KeyMapping.click(key);
         return cancelNext;
     }
 }
